  NEXTSTEP did - map an appicon as it normally would have been, then slide it
  to the position the docked appicon is).
- Updated the animation constants for scrolling/sliding/shading to better
  adapt to newer/faster machines. Also used wusleep(10) when the delay was 0
  to get rid of the jerky animation when there was no delay.
- Fixed bug with Unhide mapping windows from other workspaces.


Changes since version 0.65.1:
.............................

- fixed crash when saving empty menu item in WPrefs
- Fixed some more bash specific constructs in wsetfont.
    (Marcelo E. Magallon <marcelo.magallon@bigfoot.com>)
- fixed crash with broken apps that set null WM_CLASS
- fixed crash when with gnome panel and multi-screens, some menu
  updates and applied various other patches from 
  (Crutcher Dunnavant <crutcher@redhat.com>)
- po file fixes (Crutcher Dunnavant <crutcher@redhat.com>)
- replaced I18N_MB with I18N in one place in src/wconfig.h.in
- fixed default clip title font in WindowMaker.in
- fixed some locale related problems (Yukihiro Nakai <ynakai@redhat.com>)
- fixed a bug in RCombineAreaWithOpaqueness() (Brad <lists@anomie.yi.org>)
- added spanish INSTALL file (Efrain Maximiliano Palermo <max_drake2001@yahoo.com.ar>)
- updated Finnish pots (Tomi Kajala <tomi@iki.fi>)
- copy/paste launching in Dock
- fixed bug in positioning of window list menu when opened by kbd
- internal code clean-up with notifications for window state change and other
  stuff
- added snprintf implementation for systems that don't have this function
- removed the libPropList dependancy by adding property list handling
  code to WINGs. This code is not only better integrated with the other
  WINGs data structures, but it's also more robust. Also a backward
  compatibility header file is provided which maps old libPropList
  function names to the new WINGs based proplist names allowing old code
  to be linked to WINGs with minimal changes. For details on how to use