@@ -7,6 +7,7 @@ Changes since wmaker 0.70.0:
 - removed a wsyserror() message when reading a property list from file
   (the programmer should decide if to give that message or just ignore).
 - added a 'Bool recursive' flag to WMMergePLDictionaries()
+- added WMSubtractPLDictionaries()
 
 
 Changes since wmaker 0.65.0:
